src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-omT-dwF1000-dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\ndefault column width: F1000\ndefault window height: U\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
